--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -22,6 +22,7 @@
     {% endif %}
     <hr>
     <h2>Bulk CSV Upload</h2>
+    <p>CSV must include columns <code>reviews.text</code> and <code>reviews.rating</code>.</p>
     <form action="/api/bulk-predict" method="post" enctype="multipart/form-data">
         <input type="file" name="file" accept=".csv">
         <input type="submit" value="Upload & Test">
